tooling/nargo_cli/tests/snapshots/compile_failure/invalid_mod_mod_path/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Expected a 'fn' but found 'foo'
  ┌─ src/mod.nr:1:5
  │
1 │ pub foo() -> bool {
  │     ---
  │

error: Module '' is already part of the crate
  ┌─ src/main.nr:1:1
  │
1 │ mod crate::mod;
  │ -
  │

error: Note:  was originally declared here
  ┌─ src/main.nr:1:1
  │
1 │ mod crate::mod;
  │ -
  │

error: Expected an identifier but found 'crate'
  ┌─ src/main.nr:1:5
  │
1 │ mod crate::mod;
  │     -----
  │

error: Expected an item but found 'crate'
  ┌─ src/main.nr:1:5
  │
1 │ mod crate::mod;
  │     -----
  │

error: Expected an item but found '::'
  ┌─ src/main.nr:1:10
  │
1 │ mod crate::mod;
  │          --
  │

error: Expected an identifier but found ';'
  ┌─ src/main.nr:1:15
  │
1 │ mod crate::mod;
  │               -
  │

error: Expected an item but found ';'
  ┌─ src/main.nr:1:15
  │
1 │ mod crate::mod;
  │               -
  │

Aborting due to 8 previous errors
